--- a/site_assets/styles/styles_main.css
+++ b/site_assets/styles/styles_main.css
@@ -98,7 +98,7 @@ section.content h2.page_subtitle {
     border-radius: 4px;
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    right: 31%;
     transition: background-color .3s, opacity .5s, visibility .5s;
     opacity: 0;
     visibility: hidden;
