--- a/site_assets/styles/styles_main.css
+++ b/site_assets/styles/styles_main.css
@@ -65,8 +65,10 @@ section.content {
     background-color: white;
     margin: 10px;
     padding: 30px;
+    padding-bottom: 80px;
     border-radius: 6px;
 }
+/* Content styles */
 section.content h1.page_title {
     font-family: 'Bebas Neue', cursive;
     font-size: 80px;
@@ -84,6 +86,20 @@ section.content h2.page_subtitle {
 }
 section.content h2 {
     margin-top: 50px;
+}
+section.content p.task {
+ 
+    background-color: #EEE;
+    color: gray;
+    padding: 20px;
+    font-style: italic;
+    border-radius: 10px;
+}
+section.content hr {
+    margin: 60px 0;
+}
+section.content ul {
+    list-style-type: ">  ";
 }
 
 
