More style changes, week 5 page start

--- a/site_assets/styles/styles_main.css
+++ b/site_assets/styles/styles_main.css
@@ -14,6 +14,15 @@ body, html {
     box-sizing: border-box;
 }
 
+/* Highlight Styles */
+::selection {
+	background: #f1c232;
+	color: white;
+}
+::-moz-selection {
+	background: #f1c232;
+	color: white;
+}
 
 /* Navigation */
 nav {
@@ -42,7 +51,11 @@ nav li {
     transition: all 0.1s ease-in-out;
 }
 nav li:hover {
-    background-color: antiquewhite;
+    background-color: rgb(178, 224, 239);
+    padding: 8% 0;
+}
+nav li.active-page {
+    background-color: #EEE;
     padding: 8% 0;
 }
 nav li a:link {
@@ -81,6 +94,7 @@ section.content h2.page_subtitle {
     margin-bottom: 70px;
     font-size: 30px;
     text-align: center;
+    color: #09C;
     
 }
 section.content h2 {
@@ -100,6 +114,12 @@ section.content hr {
 section.content ul {
     list-style-type: ">  ";
 }
+section.content a:link, section.content a:visited {
+    color: #09C;
+}
+section.content a:active {
+    color: rgb(178, 224, 239);
+}
 
 /* Bottom navigation buttons */
 .bottom-nav {
@@ -111,13 +131,10 @@ section.content ul {
     max-width: 50%;
     transition: all 0.1s ease-in-out;
     font-weight: bold;
-    color: #09C;
 }
-.bottom-nav a:link {
+.bottom-nav a:link, .bottom-nav a:visited {
+    color: #09C;
     text-decoration: none;
-}
-.bottom-nav a:visited {
-    color: #09C;
 }
 .bottom-nav a:hover {
     transform: scale(1.05);
