--- a/site_assets/styles/styles_main.css
+++ b/site_assets/styles/styles_main.css
@@ -73,6 +73,14 @@ nav hr {
     margin: 0;
 }
 
+/* Homepage banner */
+.banner {
+    width: 105%;
+    margin-left: -2.5%;
+    margin-top: -30px;
+    border-radius: 6px;
+}
+
 /* Content box */
 section.content, .bottom-nav {
     width: 70%;
