--- a/site_assets/styles/styles_main.css
+++ b/site_assets/styles/styles_main.css
@@ -192,7 +192,7 @@ section.content th, section.content td {
     background-color: #6bb2d9;
   }
   #back2top:active {
-    background-color: lightgray;
+    background-color: #EEE;
   }
   #back2top.show {
     opacity: 1;
